fix create post spacing

--- a/source/scripts/horizontalNavigation.css
+++ b/source/scripts/horizontalNavigation.css
@@ -122,7 +122,7 @@
     padding: 0px;
     display: flex;
     position: absolute;
-    left: 100px;
+    left: 110px;
   }
   [data-css~='navigationWrapper'] {
     height: 55px;
@@ -158,7 +158,7 @@
     height: 55px;
     position: absolute;
     z-index: 100;
-    right: 70px;
+    right: 90px;
 
     [data-css~='navItem'][data-title="Settings"], [data-css~='navItem'][data-title="Get a domain"],
     [data-css~='navItem'][data-title="Go Ad-Free"] { display: none;}
